src/snapshots/fuzz_crash/fuzz_crash_015.txt
~~~META
description=fuzz crash
type=file
~~~SOURCE
0o0.0
0_0
0u8.0
0_
~~~PROBLEMS
Misplaced carriage return character

MISSING HEADER

The module header is missing.

0o0.0
0_0
0u8.0
0_
Note: This is a parse error. Check your syntax.
UNKNOWN OPERATOR

This looks like an operator, but it's not one I recognize!

0o0.0
0_0
0u8.0
0_
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

There should be no space between the dot and the integer.

0o0.0
0_0
0u8.0
0_
Note: This is a parse error. Check your syntax.
INVALID STATEMENT

This statement is not allowed at the top level.

0o0.0
0_0
0u8.0
0_
Only definitions, type annotations, and imports are allowed at the top level.
INVALID STATEMENT

This statement is not allowed at the top level.

0o0.0
0_0
0u8.0
0_
Only definitions, type annotations, and imports are allowed at the top level.
INVALID STATEMENT

This statement is not allowed at the top level.

0o0.0
0_0
0u8.0
0_
Only definitions, type annotations, and imports are allowed at the top level.
INVALID STATEMENT

This statement is not allowed at the top level.

0o0.0
0_0
0u8.0
0_
Only definitions, type annotations, and imports are allowed at the top level.
~~~TOKENS
Int(1:1-1:4),NoSpaceDotInt(1:4-1:6),Newline(1:1-1:1),
Int(2:1-2:4),Newline(1:1-1:1),
Int(3:1-3:4),NoSpaceDotInt(3:4-3:6),Newline(1:1-1:1),
Int(4:1-4:3),EndOfFile(4:3-4:3),
~~~PARSE
(file (1:1-4:3)
	(malformed_header (1:1-1:4) "missing_header")
	(statements
		(malformed_expr (1:4-1:6) "expr_unexpected_token")
		(int (2:1-2:4) "0_0")
		(malformed_expr (3:4-3:6) "expr_no_space_dot_int")
		(int (4:1-4:3) "0_")))
~~~FORMATTED

0_0

0_
~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END